--- a/01-intro/Homework_01_Return.ipynb
+++ b/01-intro/Homework_01_Return.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "68eda1e8-0399-48c0-97dc-c351e5c7eb53",
+   "metadata": {},
+   "source": [
+    "## Homework: 01\n",
+    "\n",
+    "### Set up the environment\n",
+    "\n",
+    "You need to install Python, NumPy, Pandas, Matplotlib and Seaborn. For that, you can the instructions from\n",
+    "[06-environment.md](../../../01-intro/06-environment.md)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8235ca5a-eed5-4334-bcc5-ead1ca4d5a47",
@@ -32,7 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "'2.2.2'"
+       "'2.2.1'"
       ]
      },
      "execution_count": 2,
@@ -45,12 +58,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ac8afde2-033c-4497-a733-93fdff1c8b8a",
+   "cell_type": "markdown",
+   "id": "4f782477-409b-4858-b7df-d23098773ea8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 01 Answer: '2.2.1'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,23 +82,19 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "1e1c26c3-9297-4a0f-b565-72e9f8fb0efb",
-   "metadata": {},
-   "source": [
-    "# Get the data.\n",
-    "!wget https://raw.githubusercontent.com/alexeygrigorev/datasets/master/laptops.csv"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e2e39364-98a9-42f4-81ca-381a2410e387",
-   "metadata": {},
+   "id": "d8440595-60ab-4107-bf4f-844f0e3d9693",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
    "outputs": [],
    "source": [
-    "# Read the data.\n",
-    "df = pd.read_csv('./laptops.csv')"
+    "# Get the data.\n",
+    "link = 'https://raw.githubusercontent.com/alexeygrigorev/datasets/master/laptops.csv'\n",
+    "df = pd.read_csv(link)"
    ]
   },
   {
@@ -243,14 +252,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "633da6eb-e6e6-468a-821d-8f2c9723a6a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "fd7aff84-d886-4f20-9c30-2114798ac890",
    "metadata": {},
@@ -288,12 +289,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f2bb903-d6ab-4ad3-bbf3-345bfd0c0a59",
+   "cell_type": "markdown",
+   "id": "09c6f8a3-7697-4a94-a456-3fa4385c0aa2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 02 Answer: 2160"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -333,12 +334,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b18b9efa-0630-4075-a500-1b6b0be69578",
+   "cell_type": "markdown",
+   "id": "ede29715-c412-4ead-ae4c-a8d270b64926",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 03 Answer: 27"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,12 +381,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76cb5536-519b-409e-9b36-e8f03cc37f32",
+   "cell_type": "markdown",
+   "id": "a13cb021-7667-4fd1-8805-051bc6cbe38d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 04 Answer: 3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -411,7 +412,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(3936.0)"
+       "3936.0"
       ]
      },
      "execution_count": 8,
@@ -425,12 +426,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b294757c-3a78-47ab-8cfc-3b82d2cb77c9",
+   "cell_type": "markdown",
+   "id": "bf892e1f-f198-4f58-8ed5-f3a3b3321746",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 05 Answer: 3936"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -461,7 +462,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(15.6)"
+       "15.6"
       ]
      },
      "execution_count": 9,
@@ -519,7 +520,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(15.6)"
+       "15.6"
       ]
      },
      "execution_count": 12,
@@ -542,7 +543,7 @@
     {
      "data": {
       "text/plain": [
-       "np.True_"
+       "True"
       ]
      },
      "execution_count": 13,
@@ -555,12 +556,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "646a6fac-16a9-4173-aa37-f8f578302654",
+   "cell_type": "markdown",
+   "id": "dea88a74-6f13-418d-9cae-a11bc9ee7bad",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 06 Answer: Yes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -754,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e1a0f877-f5d1-446b-a880-8680ea8f0f60",
+   "id": "cc4450fe",
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +953,7 @@
     }
    ],
    "source": [
-    "# Compute w.\n",
+    "# Compute w\n",
     "w = (XTX_inv @ X.T) @ y\n",
     "w"
    ]
@@ -966,7 +967,7 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(91.2998806299555)"
+       "91.29988062995815"
       ]
      },
      "execution_count": 21,
@@ -980,20 +981,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1f6d265-1853-4cfc-9a0e-1cf752ddc709",
+   "cell_type": "markdown",
+   "id": "ee980e71-d29b-46ce-b4b6-e5836331fd24",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4168e857-db4e-4454-9359-397cf2aa600b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Question 07 Answer: 91.30"
+   ]
   }
  ],
  "metadata": {
@@ -1012,7 +1005,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
